Add media queries.

--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
 </header>
 
 <div class="wrapper">
+    <div class="container">
+        <div class="page-heading">
+            <h1>Las Vegas</h1>
+            <h2>April 2021</h2>
+        </div>
+    </div>
+
     <video autoplay loop muted class="wrapper__video">
     <source src="video/home-vid.webm">
-    </video>
-    <div class="container">
-        <h1 class="home-heading animated fadeIn">Las Vegas</h1>
-        <h2 class="home-subheading animated fadeIn">April 2021</h2>
-    </div>
+    </video> 
 </div>
 
 <main>
@@ -55,13 +58,29 @@
 
             <div class="home-cta-btns">
 
-                <a href="destination.html"><div class="home-cta">
-                    <div class="flex">
+                <div class="home-cta">
+                    <a href="destination.html"><div class="flex">
                         <i class="fas fa-map-marker-alt fa-2x"></i>
                         <h3>Destination</h3>
                         <i class="fas fa-chevron-right fa-2x"></i>
-                    </div>
-                </div></a>
+                    </div></a>
+                </div>
+
+                <div class="home-cta">
+                    <a href="my-performance.html"><div class="flex">
+                        <i class="fas fa-chart-line fa-2x"></i>
+                        <h3>My Performance</h3>
+                        <i class="fas fa-chevron-right fa-2x"></i>
+                    </div></a>
+                </div>
+
+                <div class="home-cta">
+                    <a href="my-performance.html"><div class="flex">
+                        <i class="fas fa-glass-cheers fa-2x"></i>
+                        <h3>2019 Trip</h3>
+                        <i class="fas fa-chevron-right fa-2x"></i>
+                    </div></a>
+                </div>
 
             </div>
         </div>
