Begin destination page.

--- a/destination.html
+++ b/destination.html
@@ -32,5 +32,33 @@
     </div>
 </header>
 
+<div class="wrapper">
+    <div class="container">
+        <div class="page-heading">
+            <h1>Destination</h1>
+            <h2>Viva Las Vegas!</h2>
+        </div>
+    </div>
+
+    <video autoplay loop muted class="wrapper__video">
+        <source src="video/home-vid.webm">
+    </video> 
+</div>
+
+<main>
+    <div class="container">
+        <div class="central-content">
+            <h3>What can we say?<br>The destination speaks for itself.</h3>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+laboris nisi ut aliquip ex ea commodo consequat. </p>
+        </div>
+
+        <div class="vegas-facts">
+            <h3>Las Vegas Facts</h3>
+        </div>
+    </div>
+</main>
+
 </body>
 </html>
