--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="wrapper">
     <div class="container">
-        <div class="page-heading">
+        <div class="home-heading">
             <h1>Las Vegas</h1>
             <h2>April 2021</h2>
         </div>
@@ -52,7 +52,6 @@
             <div class="home-content">
                 <h3>Be part of the exclusive installers club from Ideal Boilers.</h3>
                 <p><br>The Ideal Premier Club is an exclusive Club for loyal Ideal installers. In 2019 we sent our installers on our first Premier Club trip to Miami in the sunshine state of Florida.<br><br>Visit our dedicated Miami page to see what an amazing time our installers had and be sure to keep the <strong>22nd April – 26th April 2021</strong> free to join us for another awesome adventure!<br><br>We will release exclusive trip details right here, so keep checking back for the latest information.</p>
-
                 <div class="home-content-btn"><a href="login.html">Login now to track your progress</a></div>
             </div>
 
