Add Lass Vegas facts.

--- a/destination.html
+++ b/destination.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="sass/css.css">
     <link rel="stylesheet" type="text/css" href="sass/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/kba2qks.css">
+    <script src="https://kit.fontawesome.com/9b56ac4b1a.js" crossorigin="anonymous"></script>
     <script>(function(H){H.className=H.className+="js"})(document.documentElement)</script>
 </head>
 <body>
@@ -41,7 +42,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="video/home-vid.webm">
+        <source src="video/dest-vid.mp4">
     </video> 
 </div>
 
@@ -50,15 +51,67 @@
         <div class="central-content">
             <h3>What can we say?<br>The destination speaks for itself.</h3>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
 
         <div class="vegas-facts">
             <h3>Las Vegas Facts</h3>
+            <div class="flex">
+
+                <div class="vegas-fact">
+                    <i class="fas fa-golf-ball fa-2x"></i>
+                    <h3>34 golf Courses</h3>
+                </div>
+
+                <div class="vegas-fact">
+                    <i class="fas fa-heart fa-2x"></i>
+                    <h3>315 weddings a day</h3>
+                </div>
+
+                <div class="vegas-fact">
+                    <i class="fas fa-dice fa-2x"></i>
+                    <h3>200,000 slot machines</h3>
+                </div>
+
+                <div class="vegas-fact">
+                    <i class="fas fa-cloud-sun-rain fa-2x"></i>
+                    <h3>27 degrees average</h3>
+                </div>
+
+                <div class="vegas-fact">
+                    <i class="fas fa-plane fa-2x"></i>
+                    <h3>9 hour flight from UK</h3>
+                </div>
+
+
+                <div class="vegas-fact">
+                    <i class="fas fa-clock fa-2x"></i>
+                    <h3>9 hour flight from UK</h3>
+                </div>
+
+            </div>
         </div>
     </div>
 </main>
+
+<footer>
+    <div class="container">
+        <div class="social-med">
+            <a href=""><img src="images/twitter-brands.svg"></a>
+            <a href=""><img src="images/facebook-brands.svg"></a>
+            <a href=""><img src="images/instagram-brands.svg"></a>
+            <a href=""><img src="images/youtube-brands.svg"></a>
+        </div>
+    </div>
+
+    <div class="purple-band">
+        <div class="container">
+            <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+        </div>
+    </div>
+</footer>
+
+<script src="js/nav.js"></script>
 
 </body>
 </html>
