--- a/activities.html
+++ b/activities.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="sass/css.css">
     <link rel="stylesheet" type="text/css" href="sass/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/kba2qks.css">
+    <script src="https://kit.fontawesome.com/9b56ac4b1a.js" crossorigin="anonymous"></script>
     <script>(function(H){H.className=H.className+="js"})(document.documentElement)</script>
 </head>
 <body>
@@ -32,5 +33,31 @@
     </div>
 </header>
 
-</body>
-</html>
+<div class="wrapper">
+    <div class="container">
+        <div class="page-heading">
+            <h1>Activities</h1>
+            <h2>Revealed Summer 2020</h2>
+        </div>
+    </div>
+    <img src="images/hotel.png" class="wrapper__image">
+</div>
+
+<footer>
+    <div class="container">
+        <div class="social-med">
+            <a href=""><img src="images/twitter-brands.svg"></a>
+            <a href=""><img src="images/facebook-brands.svg"></a>
+            <a href=""><img src="images/instagram-brands.svg"></a>
+            <a href=""><img src="images/youtube-brands.svg"></a>
+        </div>
+    </div>
+
+    <div class="purple-band">
+        <div class="container">
+            <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+        </div>
+    </div>
+</footer>
+
+<script src="js/nav.js"></script>
