Create contact page.

--- a/activities.html
+++ b/activities.html
@@ -40,7 +40,7 @@
             <h2>Revealed Summer 2020</h2>
         </div>
     </div>
-    <img src="images/hotel.png" class="wrapper__image">
+    <img src="images/activities.png" class="wrapper__image">
 </div>
 
 <footer>
