--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="home-cta">
-                    <a href="my-performance.html"><div class="flex">
+                    <a href="oldtrip.html"><div class="flex">
                         <i class="fas fa-glass-cheers fa-2x"></i>
                         <h3>2019 Trip</h3>
                         <i class="fas fa-chevron-right fa-2x"></i>
