--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
                     </div></a>
                 </div>
 
+                <div class="home-cta">
+                    <a href="oldtrip.html"><div class="flex">
+                        <i class="fas fa-signature fa-2x"></i>
+                        <h3>Register Now</h3>
+                        <i class="fas fa-chevron-right fa-2x"></i>
+                    </div></a>
+                </div>
+
             </div>
         </div>
     </div>
