Add haven't registered copy.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                     </div></a>
                 </div>
 
+                <p>Haven't registered yet?</p>
+
                 <div class="home-cta">
                     <a href="oldtrip.html"><div class="flex">
                         <i class="fas fa-signature fa-2x"></i>
