Amend destination copy.

--- a/destination.html
+++ b/destination.html
@@ -49,46 +49,41 @@
 <main>
     <div class="container">
         <div class="central-content">
-            <h3>What can we say?<br>The destination speaks for itself.</h3>
+            <h3>You’ve heard the famous saying, Viva Las Vegas,</h3>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p> and now it’s time for you to experience it’s reality as you visit one of the most vibrant and exciting destinations in America, and maybe even the world!
+                <br><br>
+                From the bright lights of the city’s famous strip, to fabulous entertainment and an exciting nightlife – get ready to take in the mind-blowing city of Las Vegas.
+                <br><br>Stay tuned to find out more about what you’ll be getting up to during this exclusive once-in-a-lifetime trip…</p>
         </div>
 
         <div class="vegas-facts">
             <h3>Las Vegas Facts</h3>
             <div class="flex">
-
                 <div class="vegas-fact">
-                    <i class="fas fa-golf-ball fa-2x"></i>
-                    <h3>34 golf Courses</h3>
+                    <i class="fas fa-hotel fa-2x"></i>
+                    <h3>149,158 hotel/motel rooms in Las Vegas</h3>
                 </div>
 
                 <div class="vegas-fact">
-                    <i class="fas fa-heart fa-2x"></i>
-                    <h3>315 weddings a day</h3>
+                    <i class="fas fa-child fa-2x"></i>
+                    <h3>42 million people visit Las Vegas each year</h3>
                 </div>
 
                 <div class="vegas-fact">
                     <i class="fas fa-dice fa-2x"></i>
-                    <h3>200,000 slot machines</h3>
+                    <h3>130 casinos in Las Vegas</h3>
                 </div>
 
                 <div class="vegas-fact">
-                    <i class="fas fa-cloud-sun-rain fa-2x"></i>
-                    <h3>27 degrees average</h3>
+                    <i class="fas fa-road fa-2x"></i>
+                    <h3>Las Vegas strip 6.759km long</h3>
                 </div>
 
                 <div class="vegas-fact">
-                    <i class="fas fa-plane fa-2x"></i>
-                    <h3>9 hour flight from UK</h3>
+                    <i class="fas fa-utensils fa-2x"></i>
+                    <h3>There are over 2000 Restaurant on or just off the strip</h3>
                 </div>
-
-
-                <div class="vegas-fact">
-                    <i class="fas fa-clock fa-2x"></i>
-                    <h3>9 hour flight from UK</h3>
-                </div>
-
             </div>
         </div>
     </div>
