Add video headers.

--- a/destination.html
+++ b/destination.html
@@ -42,7 +42,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="video/dest-vid.mp4">
+        <source src="video/destination.mp4">
     </video> 
 </div>
 
