--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-    <source src="video/home-vid.webm">
+    <source src="video/homepage.mp4">
     </video> 
 </div>
 
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="home-cta">
-                    <a href="my-performance.html"><div class="flex">
+                    <a href="login.html"><div class="flex">
                         <i class="fas fa-chart-line fa-2x"></i>
                         <h3>My Performance</h3>
                         <i class="fas fa-chevron-right fa-2x"></i>
@@ -84,7 +84,7 @@
                 <p>Haven't registered yet?</p>
 
                 <div class="home-cta">
-                    <a href="oldtrip.html"><div class="flex">
+                    <a href=""><div class="flex">
                         <i class="fas fa-signature fa-2x"></i>
                         <h3>Register Now</h3>
                         <i class="fas fa-chevron-right fa-2x"></i>
