Add contact copy.

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,33 @@
             <h1>Contact Us</h1>
         </div>
     </div>
-    <img src="images/contact.png" class="wrapper__image">
+
+    <video autoplay loop muted class="wrapper__video">
+        <source src="video/destination.mp4">
+    </video> 
 </div>
+<main>
+    <div class="container">
+        <div class="flex">
+            <div class="contact-content">
+                <br>
+                <br>
+                <h3>At Ideal Boilers, we are committed to delivering the highest level of customer service. </h3>
+                <p>With more than 100 years' experience in the heating industry, we know how important confidence and trust are to our customer. We're more than just your average boiler company.
+<br><br>
+We strive to keep our installers at the heart of everything we do. From in-depth product information and on-site training to Installer Connect rewards and business support, we can ensure you'll get more 
+from Ideal. 
+<br><br>
+As part of our exciting rewards we offer our most loyal installers to join us on amazing experiences like Premier Club. 
+<br><br>
+Email: ideal@idealboilers.com
+<br><br>
+If you experience any technical difficulties accessing My Performance page, please email premierclub2019@firstevent.co.uk.</p>
+            </div>
+        </div>
+    </div>
+</main>
+
 
 <footer>
     <div class="container">
