Add contact form.

--- a/contact.html
+++ b/contact.html
@@ -48,19 +48,39 @@
     <div class="container">
         <div class="flex">
             <div class="contact-content">
-                <br>
-                <br>
                 <h3>At Ideal Boilers, we are committed to delivering the highest level of customer service. </h3>
-                <p>With more than 100 years' experience in the heating industry, we know how important confidence and trust are to our customer. We're more than just your average boiler company.
-<br><br>
-We strive to keep our installers at the heart of everything we do. From in-depth product information and on-site training to Installer Connect rewards and business support, we can ensure you'll get more 
-from Ideal. 
-<br><br>
-As part of our exciting rewards we offer our most loyal installers to join us on amazing experiences like Premier Club. 
-<br><br>
-Email: ideal@idealboilers.com
-<br><br>
-If you experience any technical difficulties accessing My Performance page, please email premierclub2019@firstevent.co.uk.</p>
+               <br> <p>With more than 100 years' experience in the heating industry, we know how important confidence and trust are to our customer. We're more than just your average boiler company.
+                <br><br>
+                We strive to keep our installers at the heart of everything we do. From in-depth product information and on-site training to Installer Connect rewards and business support, we can ensure you'll get more 
+                from Ideal. 
+                <br><br>
+                As part of our exciting rewards we offer our most loyal installers to join us on amazing experiences like Premier Club. 
+                <br><br>
+                Email: <a href="mailto:ideal@idealboilers.com">ideal@idealboilers.com</a>
+                <br><br>
+                If you experience any technical difficulties accessing My Performance page, please email <a href="milto:premierclub2021@firstevent.co.uk">premierclub2021@firstevent.co.uk</a>.</p>
+            </div>
+
+            <div class="contact-form">
+                <form action="" method="post">
+                <div class="name-input">
+                    <input type="text" placeholder="Full Name" name="uname" required>
+                </div>
+
+                <div class="password-input">
+                    <input type="password" placeholder="Email" name="psw" required>
+                </div>
+
+                <div class="gsn-input">
+                    <input type="password" placeholder="Gas Safe Number" name="psw" required>
+                </div>
+
+                <div class="message-input">
+                        <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea>
+                </div>
+
+                <button type="submit" class="submit-btn"> <a href="my-performance.html">Enter</a></button>
+            </form>
             </div>
         </div>
     </div>
