Add video header.

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="video/destination.mp4">
+        <source src="video/contact.mp4">
     </video> 
 </div>
 <main>
