add Contact heading.

--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,8 @@
             </div>
 
             <div class="contact-form">
+                <h3>Contact Us</h3>
+                <br>
                 <form action="" method="post">
                 <div class="name-input">
                     <input type="text" placeholder="Full Name" name="uname" required>
