--- a/contact.html
+++ b/contact.html
@@ -70,18 +70,18 @@
                 </div>
 
                 <div class="password-input">
-                    <input type="password" placeholder="Email" name="psw" required>
+                    <input type="email" placeholder="Email" name="email" required>
                 </div>
 
                 <div class="gsn-input">
-                    <input type="password" placeholder="Gas Safe Number" name="psw" required>
+                    <input type="text" placeholder="Gas Safe Number" name="gsn" required>
                 </div>
 
                 <div class="message-input">
-                        <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea>
+                    <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea>
                 </div>
 
-                <button type="submit" class="submit-btn"> <a href="my-performance.html">Enter</a></button>
+                <button type="submit" class="submit-btn"> <a href="">Enter</a></button>
             </form>
             </div>
         </div>
