Remove root video folders & add cloudinary.

--- a/destination.html
+++ b/destination.html
@@ -42,7 +42,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="video/destination.mp4">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236777/AdobeStock_209603394-web_l6ye03.mp4">
     </video> 
 </div>
 
