--- a/hotel.html
+++ b/hotel.html
@@ -40,7 +40,10 @@
             <h2>Revealed Spring 2020</h2>
         </div>
     </div>
-    <img src="images/hotel.png" class="wrapper__image">
+
+    <video autoplay loop muted class="wrapper__video">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236794/AdobeStock_139895595-web_yswg1x.mp4">
+    </video> 
 </div>
 
 <footer>
