--- a/my-performance.html
+++ b/my-performance.html
@@ -18,13 +18,13 @@
                     <a class="skip" href="#menu">Menu</a>
                     <ul id="menu">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Destination</a></li>
-                        <li><a href="#">Hotel</a></li>
-                        <li><a href="#">Itinerary</a></li>
-                        <li><a href="#">Activities</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="destination.html">Destination</a></li>
+                        <li><a href="hotel.html">Hotel</a></li>
+                        <li><a href="itinerary.html">Itinerary</a></li>
+                        <li><a href="activities.html">Activities</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="my-performance.html">My Performance</a></li>
-                        <li><a href="#">2019 Trip</a></li>
+                        <li><a href="oldtrip.html">2019 Trip</a></li>
                     </ul>
                 </nav>
             </div>
