--- a/activities.html
+++ b/activities.html
@@ -40,7 +40,10 @@
             <h2>Revealed Summer 2020</h2>
         </div>
     </div>
-    <img src="images/activities.png" class="wrapper__image">
+
+    <video autoplay loop muted class="wrapper__video">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236771/AdobeStock_215493906-web_gubxch.mp4">
+    </video> 
 </div>
 
 <footer>
