--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-    <source src="video/homepage.mp4">
+    <source src="https://res.cloudinary.com/first-event/video/upload/v1576236800/28477582-hd-web_rhmmnk.mp4">
     </video> 
 </div>
 
