--- a/itinerary.html
+++ b/itinerary.html
@@ -40,7 +40,10 @@
             <h2>Revealed Autumn 2020</h2>
         </div>
     </div>
-    <img src="images/itinerary.png" class="wrapper__image">
+
+    <video autoplay loop muted class="wrapper__video">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236800/AdobeStock_79618727-web_nkmxx9.mp4">
+    </video> 
 </div>
 
 <footer>
