Add 2019 pag with images.

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="video/contact.mp4">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236788/AdobeStock_248186127-web_rsjqs3.mp4">
     </video> 
 </div>
 <main>
