--- a/oldtrip.html
+++ b/oldtrip.html
@@ -39,8 +39,42 @@
             <h1>2019 Trip</h1>
         </div>
     </div>
-    <img src="images/2019.png" class="wrapper__image">
+    <img src="images/2019.jpg" class="wrapper__image">
 </div>
+
+<main>
+    <div class="container">
+        <div class="flex">
+            <div class="gallery">
+
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238407/GA%20Miami%202019%20images/IMG_2255_denuwp.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238407/GA%20Miami%202019%20images/IMG_2255_denuwp.jpg" class="old-trip-img" alt="Miami 2019 image">
+                </a>
+
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238405/GA%20Miami%202019%20images/IMG_2648_dxzizj.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238405/GA%20Miami%202019%20images/IMG_2648_dxzizj.jpg" class="old-trip-img" alt="Miami 2019 image">
+                </a>
+
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_0532_bxvhpn.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_0532_bxvhpn.jpg" class="old-trip-img" alt="Miami 2019 image">
+                </a>
+
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2912_d3yl7p.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2912_d3yl7p.jpg" class="old-trip-img" alt="Miami 2019 image">
+                </a>
+
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2715_cluoqx.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2715_cluoqx.jpg" class="old-trip-img" alt="Miami 2019 image">
+                </a>
+
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238397/GA%20Miami%202019%20images/IMG_0486_d1xk7x.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238397/GA%20Miami%202019%20images/IMG_0486_d1xk7x.jpg" class="old-trip-img" alt="Miami 2019 image">
+                </a>
+
+            </div>
+        </div>
+    </div>
+</main>
 
 <footer>
     <div class="container">
