--- a/my-performance.html
+++ b/my-performance.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" type="text/css" href="sass/css.css">
     <link rel="stylesheet" type="text/css" href="sass/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/kba2qks.css">
+    <script src="https://kit.fontawesome.com/9b56ac4b1a.js" crossorigin="anonymous"></script>
     <script>(function(H){H.className=H.className+="js"})(document.documentElement)</script>
 </head>
 <body>
     <header>
         <div class="container">
             <div class="flex">
-                <a href=""><img src="images/Ideal-logo-white.png" class="header-logo"></a>
+                <a href="index.html"><img src="images/Ideal-logo-white.png" class="header-logo"></a>
                 <nav class="nav">
                     <a class="skip" href="#menu">Menu</a>
                     <ul id="menu">
