Add webm source src.

--- a/activities.html
+++ b/activities.html
@@ -43,6 +43,7 @@
 
     <video autoplay loop muted class="wrapper__video">
         <source src="https://res.cloudinary.com/first-event/video/upload/v1576236771/AdobeStock_215493906-web_gubxch.mp4">
+            <source src="https://res.cloudinary.com/first-event/video/upload/v1576576787/GA%20Vegas%20header%20videos/WEBM/AdobeStock_215493906-web_tg9vee.webm">
     </video> 
 </div>
 
