--- a/destination.html
+++ b/destination.html
@@ -42,7 +42,8 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236777/AdobeStock_209603394-web_l6ye03.mp4">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576577868/GA%20Vegas%20header%20videos/AdobeStock_209603394-web_daaold.mp4">
+            <source src="https://res.cloudinary.com/first-event/video/upload/v1576576802/GA%20Vegas%20header%20videos/WEBM/AdobeStock_209603394-web_tzgwlv.webm">
     </video> 
 </div>
 
