--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,8 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236788/AdobeStock_248186127-web_rsjqs3.mp4">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236788/GA%20Vegas%20header%20videos/AdobeStock_248186127-web_rsjqs3.mp4">
+            <source src="https://res.cloudinary.com/first-event/video/upload/v1576576880/GA%20Vegas%20header%20videos/WEBM/AdobeStock_248186127-web_ycwz2a.webm">
     </video> 
 </div>
 <main>
