--- a/hotel.html
+++ b/hotel.html
@@ -42,7 +42,8 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236794/AdobeStock_139895595-web_yswg1x.mp4">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236794/GA%20Vegas%20header%20videos/AdobeStock_139895595-web_yswg1x.mp4">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576576876/GA%20Vegas%20header%20videos/WEBM/AdobeStock_139895595-web_mr9gxc.webm">
     </video> 
 </div>
 
