--- a/itinerary.html
+++ b/itinerary.html
@@ -43,6 +43,7 @@
 
     <video autoplay loop muted class="wrapper__video">
         <source src="https://res.cloudinary.com/first-event/video/upload/v1576236800/AdobeStock_79618727-web_nkmxx9.mp4">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576576902/GA%20Vegas%20header%20videos/WEBM/AdobeStock_79618727-web_kebjjr.webm">
     </video> 
 </div>
 
