--- a/destination.html
+++ b/destination.html
@@ -42,8 +42,8 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576577868/GA%20Vegas%20header%20videos/AdobeStock_209603394-web_daaold.mp4">
-            <source src="https://res.cloudinary.com/first-event/video/upload/v1576576802/GA%20Vegas%20header%20videos/WEBM/AdobeStock_209603394-web_tzgwlv.webm">
+       <source src="https://res.cloudinary.com/first-event/video/upload/v1576236800/GA%20Vegas%20header%20videos/28477582-hd-web_rhmmnk.mp4">
+    </video> 
     </video> 
 </div>
 
