Add extra images to photo gallery.

--- a/oldtrip.html
+++ b/oldtrip.html
@@ -44,9 +44,20 @@
 
 <main>
     <div class="container">
+
+        <div class="central-content">
+            <h3>In May 2019, we took our most loyal installers to Miami in the sunshine state of Florida. </h3>
+            <br><br>
+            <p>The world famous FountainBleau hotel on Miami beach played host on the trip. The five star luxury property is the setting for countless movies, pop videos and premieres. Activities included a helicopter and airboat experience out in the Everglades, Golf at the Normandy Golf Course on Miami Beach, a private pool party at the hotel, dining at top restaurants alongside a fantastic finale to say ‘Thank You’!<br><br>The positive feedback from the trip has been overwhelming and the amazing experience our installers had can been seen in some photos and video from the trip below.
+            <br><br>
+            <strong>Don’t forget to register to join us for 2021 in Vegas!</strong>
+            </p>
+            <br><br>
+            <h3>2019 Photo Gallery</h3>
+        </div>
+
         <div class="flex">
             <div class="gallery">
-
                 <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238407/GA%20Miami%202019%20images/IMG_2255_denuwp.jpg">
                     <img src="https://res.cloudinary.com/first-event/image/upload/v1576238407/GA%20Miami%202019%20images/IMG_2255_denuwp.jpg" class="old-trip-img" alt="Miami 2019 image">
                 </a>
@@ -71,7 +82,20 @@
                     <img src="https://res.cloudinary.com/first-event/image/upload/v1576238397/GA%20Miami%202019%20images/IMG_0486_d1xk7x.jpg" class="old-trip-img" alt="Miami 2019 image">
                 </a>
 
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238406/GA%20Miami%202019%20images/IMG_3055_jzjblz.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238406/GA%20Miami%202019%20images/IMG_3055_jzjblz.jpg" class="old-trip-img">
+                </a>
+
+                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238403/GA%20Miami%202019%20images/IMG_2784_kec4u7.jpg">
+                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238403/GA%20Miami%202019%20images/IMG_2784_kec4u7.jpg" class="old-trip-img">
+                </a>
             </div>
+        </div>
+
+        <div class="quotes central-content">
+            <h3>“This was the most amazing time”</h3>
+            <br>
+            <h3>“I cannot tell you what an amazing experience this was! Thank you Ideal!”</h3>
         </div>
     </div>
 </main>
