--- a/oldtrip.html
+++ b/oldtrip.html
@@ -58,37 +58,22 @@
 
         <div class="flex">
             <div class="gallery">
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238407/GA%20Miami%202019%20images/IMG_2255_denuwp.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238407/GA%20Miami%202019%20images/IMG_2255_denuwp.jpg" class="old-trip-img" alt="Miami 2019 image">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040181/GA%20Miami%202019%20trip/img-2912_gz7ynz.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238405/GA%20Miami%202019%20images/IMG_2648_dxzizj.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238405/GA%20Miami%202019%20images/IMG_2648_dxzizj.jpg" class="old-trip-img" alt="Miami 2019 image">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040181/GA%20Miami%202019%20trip/img-2648_xvcsqc.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_0532_bxvhpn.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_0532_bxvhpn.jpg" class="old-trip-img" alt="Miami 2019 image">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-2255_bttygt.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2912_d3yl7p.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2912_d3yl7p.jpg" class="old-trip-img" alt="Miami 2019 image">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-0486_df22k2.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2715_cluoqx.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238400/GA%20Miami%202019%20images/IMG_2715_cluoqx.jpg" class="old-trip-img" alt="Miami 2019 image">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-0532_j9ltbn.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238397/GA%20Miami%202019%20images/IMG_0486_d1xk7x.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238397/GA%20Miami%202019%20images/IMG_0486_d1xk7x.jpg" class="old-trip-img" alt="Miami 2019 image">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-2715_u8qels.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238406/GA%20Miami%202019%20images/IMG_3055_jzjblz.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238406/GA%20Miami%202019%20images/IMG_3055_jzjblz.jpg" class="old-trip-img">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040181/GA%20Miami%202019%20trip/img-3055_uss6js.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <a target="_blank" href="https://res.cloudinary.com/first-event/image/upload/v1576238403/GA%20Miami%202019%20images/IMG_2784_kec4u7.jpg">
-                    <img src="https://res.cloudinary.com/first-event/image/upload/v1576238403/GA%20Miami%202019%20images/IMG_2784_kec4u7.jpg" class="old-trip-img">
-                </a>
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-2784_jlszqd.jpg" class="old-trip-img" alt="Miami 2019 image">
+
             </div>
         </div>
 
