Update social media icons & links.

--- a/destination.html
+++ b/destination.html
@@ -92,10 +92,12 @@
 <footer>
     <div class="container">
         <div class="social-med">
-            <a href=""><img src="images/twitter-brands.svg"></a>
-            <a href=""><img src="images/facebook-brands.svg"></a>
-            <a href=""><img src="images/instagram-brands.svg"></a>
-            <a href=""><img src="images/youtube-brands.svg"></a>
+            <a href="https://twitter.com/IdealBoilers" target="_blank"><img src="images/twitter-brands.svg"></a>
+            <a href="https://www.facebook.com/idealboilers/" target="_blank"><img src="images/facebook-brands.svg"></a>
+            <a href="https://www.instagram.com/ideal_boilers/" target="_blank"><img src="images/instagram-brands.svg"></a>
+            <a href="https://www.youtube.com/user/IdealHeatingLtd" target="_blank"><img src="images/youtube-brands.svg"></a>
+            <a href="https://www.linkedin.com/company/ideal-boilers/" target="_blank"><img src="images/linkedin.svg"></a>
+            <a href="https://www.pinterest.co.uk/Ideal_boilers/" target="_blank"><img src="images/pinterest.svg"></a>
         </div>
     </div>
 
