Amend copy spelling.

--- a/destination.html
+++ b/destination.html
@@ -82,7 +82,7 @@
 
                 <div class="vegas-fact">
                     <i class="fas fa-utensils fa-2x"></i>
-                    <h3>There are over 2000 Restaurant on or just off the strip</h3>
+                    <h3>There are over 2000 restaurants on or just off the strip</h3>
                 </div>
             </div>
         </div>
