--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p>Haven't registered yet?</p>
 
                 <div class="home-cta">
-                    <a href=""><div class="flex">
+                    <a href="login.html"><div class="flex">
                         <i class="fas fa-signature fa-2x"></i>
                         <h3>Register Now</h3>
                         <i class="fas fa-chevron-right fa-2x"></i>
