Add logout button.

--- a/my-performance.html
+++ b/my-performance.html
@@ -36,7 +36,7 @@
 
         <div class="title-logout">
             <h1>My Performance</h1>
-            <p>Sign out</p>
+            <div class="logout-btn"><p>Logout to refresh</p></div>
         </div>
 
         <div class="flex">
