Add hotel page and media queries.

--- a/hotel.html
+++ b/hotel.html
@@ -37,11 +37,48 @@
     <div class="container">
         <div class="page-heading">
             <h1>Hotel</h1>
-            <h2>Revealed Spring 2020</h2>
+            <h2>Bellagio Las Vegas</h2>
         </div>
     </div>
-    <img src="images/hotel.png" class="wrapper__image">
+    <video autoplay loop muted class="wrapper__video">
+        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236794/GA%20Vegas%20header%20videos/AdobeStock_139895595-web_yswg1x.mp4">
+    </video> 
 </div>
+
+<main>
+    <div class="container">
+        <div class="central-content">
+            <h3>Viva Las Vegas!</h3>
+            <br>
+            <p>During your exclusive trip, you’ll stay at the famous 5* Bellagio Las Vegas, known for its mesmerising fountains and prime position in the centre of the Las Vegas strip.<br><br>
+            On top of beautifully decorated rooms, the hotel boasts a huge range of restaurants offering different cuisines. Amongst these include The Mayfair Supper Club – also offering nightly live entertainment. With exclusive entertainment, incredible nightlife and in the midst of the fast-moving Vegas lifestyle, don’t miss out on the chance to join us at this fantastic property.</p>
+            <div class="hotel-btn"><a href="login.html">Check your My Performance page now!</a></div>
+        </div>
+
+        <div class="hotel-gallery-holder">
+            <h3>Hotel Gallery</h3>
+            <div class="flex">
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/botanical-gardens_jujjgu.jpg" class="hotel-gall-img" alt="Bellagio hotel botanical gardens">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-fountains_s6o2ul.jpg" class="hotel-gall-img" alt="bellagio hotel fountains">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-casino_nyfsho.jpg" class="hotel-gall-img" alt="bellagio hotel casino">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-dining_qxl6iu.jpg" class="hotel-gall-img" alt="bellagio hotel dining area">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560410/hotel-lobby_roz6cb.jpg" class="hotel-gall-img" alt="bellagio hotel lobby">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-fountains2_r8h3qo.jpg" class="hotel-gall-img" class="hotel bellagio fountains at dusk">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560410/hotel-pool-fountain_yczfyv.jpg" class="hotel-gall-img" class="hotel bellagio pool fountain">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-dining2_eggstz.jpg" class="hotel-gall-img" alt="hotel bellagio patio area">
+
+                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-pool_ejpmld.jpg" class="hotel-gall-img" alt="hotel bellagio pool">
+            </div>
+        </div>
+    </div>
+</main>
 
 <footer>
     <div class="container">
