--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container">
             <div class="flex">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
-                <p><a href="">Terms & Conditions</a></p>
+                <p><a href="terms.html">Terms & Conditions</a></p>
         </div>
         </div>
     </div>
