Add terms to footer of each page.

--- a/oldtrip.html
+++ b/oldtrip.html
@@ -99,7 +99,10 @@
 
     <div class="purple-band">
         <div class="container">
-            <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+            <div class="flex">
+                <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+                <p><a href="">Terms & Conditions</a></p>
+        </div>
         </div>
     </div>
 </footer>
