--- a/activities.html
+++ b/activities.html
@@ -61,9 +61,12 @@
 
     <div class="purple-band">
         <div class="container">
-            <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+            <div class="flex">
+                <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
+                <p><a href="">Terms & Conditions</a></p>
+        </div>
         </div>
     </div>
-</footer>
+</footer> 
 
 <script src="js/nav.js"></script>
