Add mebm videos.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="purple-band">
         <div class="container">
-            <div class="flex">
+            <div class="flex terms">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
                 <p><a href="terms.html">Terms & Conditions</a></p>
         </div>
