--- a/activities.html
+++ b/activities.html
@@ -42,8 +42,8 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236771/AdobeStock_215493906-web_gubxch.mp4">
-            <source src="https://res.cloudinary.com/first-event/video/upload/v1576576787/GA%20Vegas%20header%20videos/WEBM/AdobeStock_215493906-web_tg9vee.webm">
+        <source src="videos/mp4/activities.mp4">
+            <source src="videos/webm/acitivities.webm">
     </video> 
 </div>
 
@@ -63,7 +63,7 @@
         <div class="container">
             <div class="flex">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
-                <p><a href="">Terms & Conditions</a></p>
+                <p class="terms"><a href="">Terms & Conditions</a></p>
         </div>
         </div>
     </div>
