--- a/hotel.html
+++ b/hotel.html
@@ -41,11 +41,8 @@
         </div>
     </div>
     <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236794/GA%20Vegas%20header%20videos/AdobeStock_139895595-web_yswg1x.mp4">
-
-    <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576577868/GA%20Vegas%20header%20videos/AdobeStock_209603394-web_daaold.mp4">
-            <source src="https://res.cloudinary.com/first-event/video/upload/v1576576802/GA%20Vegas%20header%20videos/WEBM/AdobeStock_209603394-web_tzgwlv.webm">
+        <source src="videos/mp4/hotel.mp4">
+        <source src="videos/webm/hotel.webm">
     </video> 
 </div>
 
@@ -100,7 +97,7 @@
         <div class="container">
             <div class="flex">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
-                <p><a href="">Terms & Conditions</a></p>
+                <p class="terms"><a href="">Terms & Conditions</a></p>
         </div>
         </div>
     </div>
