--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-    <source src="https://res.cloudinary.com/first-event/video/upload/v1576236800/GA%20Vegas%20header%20videos/28477582-hd-web_rhmmnk.mp4">
+    <source src="videos/mp4/home-dest.mp4">
     </video> 
 </div>
 
@@ -115,9 +115,9 @@
 
     <div class="purple-band">
         <div class="container">
-            <div class="flex terms">
+            <div class="flex">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
-                <p><a href="terms.html">Terms & Conditions</a></p>
+                <p class="terms"><a href="terms.html">Terms & Conditions</a></p>
         </div>
         </div>
     </div>
