--- a/itinerary.html
+++ b/itinerary.html
@@ -42,8 +42,8 @@
     </div>
 
     <video autoplay loop muted class="wrapper__video">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576236800/AdobeStock_79618727-web_nkmxx9.mp4">
-        <source src="https://res.cloudinary.com/first-event/video/upload/v1576576902/GA%20Vegas%20header%20videos/WEBM/AdobeStock_79618727-web_kebjjr.webm">
+        <source src="videos/mp4/itinerary.mp4">
+        <source src="videos/webm/itinerary.webm">
     </video> 
 </div>
 
@@ -63,7 +63,7 @@
         <div class="container">
             <div class="flex">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
-                <p><a href="">Terms & Conditions</a></p>
+                <p class="terms"><a href="">Terms & Conditions</a></p>
         </div>
         </div>
     </div>
