--- a/my-performance.html
+++ b/my-performance.html
@@ -169,7 +169,7 @@
         <div class="container">
             <div class="flex">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
-                <p><a href="">Terms & Conditions</a></p>
+                <p class="terms"><a href="">Terms & Conditions</a></p>
         </div>
         </div>
     </div>
