--- a/oldtrip.html
+++ b/oldtrip.html
@@ -58,21 +58,21 @@
 
         <div class="flex">
             <div class="gallery">
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040181/GA%20Miami%202019%20trip/img-2912_gz7ynz.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-2912_gz7ynz.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040181/GA%20Miami%202019%20trip/img-2648_xvcsqc.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-2648_xvcsqc.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-2255_bttygt.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-2255_bttygt.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-0486_df22k2.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-0486_df22k2.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-0532_j9ltbn.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-0532_j9ltbn.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-2715_u8qels.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-2715_u8qels.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040181/GA%20Miami%202019%20trip/img-3055_uss6js.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-3055_uss6js.jpg" class="old-trip-img" alt="Miami 2019 image">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1578040180/GA%20Miami%202019%20trip/img-2784_jlszqd.jpg" class="old-trip-img" alt="Miami 2019 image">
+                <img src="images/oldtrip/img-2784_jlszqd.jpg" class="old-trip-img" alt="Miami 2019 image">
 
             </div>
         </div>
